syntax = "proto3";

package Contracts.Shopping.Commands;

import "Abstractions/Abstractions.proto";

service ShoppingCommandService {
  rpc StartShopping(StartShoppingCommand) returns (Abstractions.Protobuf.CommandResponse);
  rpc AddItem(AddCartItemCommand) returns (Abstractions.Protobuf.CommandResponse);
}

message StartShoppingCommand {
  string CustomerId = 1;
}

message AddCartItemCommand {
  string CartId = 1;
  string ProductId = 2;
  int64 Quantity = 3;
}